[package]
name = "dysk"
version = "2.10.1"
authors = ["dystroy <denys.seguret@gmail.com>"]
edition = "2018"
keywords = ["linux", "filesystem", "fs", "lfs", "disk"]
license = "MIT"
categories = ["filesystem", "command-line-utilities"]
description = "give information on mounted filesystems"
repository = "https://github.com/Canop/dysk"
homepage = "https://dystroy.org/dysk"
documentation = "https://dystroy.org/dysk"
readme = "README.md"
rust-version = "1.70"
exclude = ["website", "dysk*.zip"]
build = "build.rs"
resolver = "1"

[build-dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
clap_complete = "4.4"
clap_mangen = "0.2.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"

[dependencies]
bet = "1.0.4"
clap = { version = "4.4", features = ["derive", "cargo"] }
clap-help = "1.4"
file-size = "1.0.3"
lfs-core = "0.12"
serde = "1.0"
serde_json = "1.0"
termimad = "0.32"

[profile.release]
strip = true

[patch.crates-io]
# bet = { path = "../bet" }
# minimad = { path = "../minimad" }
# termimad = { path = "../termimad" }
# clap-help = { path = "../clap-help" }
# lfs-core = { path = "../lfs-core" }
